# ADI-Stack-Airbender-System

./: Cargo.toml  _typos.toml  build.sh  recreate_verifiers.sh  rust-toolchain.toml
.github/release-please/: config.json
.github/workflows/: ci.yml  publish-crates.yaml  release-please.yaml  update-verifiers.yml
blake2s_u32/: Cargo.toml
blake2s_u32/benches/: neon.rs
blake2s_u32/src/: aligned_array.rs  lib.rs  state_with_extended_control.rs
circuit_defs/bigint_with_control/: Cargo.toml
circuit_defs/blake2_with_compression/: Cargo.toml
circuit_defs/circuit_common/: Cargo.toml
circuit_defs/final_reduced_risc_v_machine/: Cargo.toml
circuit_defs/keccak_special5/: Cargo.toml
circuit_defs/machine_without_signed_mul_div/: Cargo.toml
circuit_defs/prover_examples/: Cargo.toml
circuit_defs/reduced_risc_v_log_23_machine/: Cargo.toml
circuit_defs/reduced_risc_v_machine/: Cargo.toml
circuit_defs/risc_v_cycles/: Cargo.toml
circuit_defs/setups/: 42c88bf092af93acc4a3bf780b64dc98a36ba03b54d7acd886dbd9b3eff90285_42c88bf092af93acc4a3bf780b64dc98a36ba03b54d7acd886dbd9b3eff90285.json  Cargo.toml
circuit_defs/trace_and_split/: Cargo.toml
common_constants/: Cargo.toml
common_constants/src/: circuit_families.rs  lib.rs
cs/: Cargo.toml  add_sub_lui_auipc_mop_preprocessed_layout.json  bigint_delegation_layout.json  blake_delegation_layout.json  decoder_circuit_layout.json  full_machine_with_delegation_layout.json  full_machine_with_delegation_without_signed_mul_div_layout.json  jump_branch_slt_preprocessed_layout.json  keccak_delegation_layout.json  keccak_delegation_ssa.json  load_store_preprocessed_layout.json  minimal_machine_with_delegation_layout.json  minimal_machine_with_delegation_ssa.json  mul_div_preprocessed_layout.json  mul_div_unsigned_preprocessed_layout.json  reduced_machine_preprocessed_layout.json  shift_binop_csrrw_preprocessed_layout.json  subword_only_load_store_preprocessed_layout.json  word_only_load_store_preprocessed_layout.json
cs/src/: constraint.rs  csr_properties.rs  lib.rs  tables.rs  types.rs  utils.rs
docs/: README.md  air_constraints.md  autogenerated_artifacts.md  circuit_entry_points.md  circuit_overview.md  delegation_circuits.md  end_to_end.md  instruction_gadgets.md  machine_configuration.md  overview.md  philosophy_and_logic.md  proof_chaining.md  repo_layout.md  simulator_supported_instructions.md  subarguments_used.md  tests_overview.md  tutorial.md  writing_programs.md
examples/basic_fibonacci/: Cargo.toml
examples/big_int/: Cargo.toml  app.elf  app.text
examples/dynamic_fibonacci/: Cargo.toml
execution_utils/: Cargo.toml
execution_utils/src/: lib.rs  proofs.rs  recursion.rs  recursion_strategy.rs  unrolled.rs  verifiers.rs
fft/: Cargo.toml
field/: Cargo.toml
full_statement_verifier/: Cargo.toml
full_statement_verifier/src/: lib.rs  unrolled_proof_statement.rs
gpu_prover/: Cargo.toml
gpu_witness_eval_generator/: Cargo.toml
non_determinism_source/: Cargo.toml
output2/: final_program_proof.json
poseidon2/: Cargo.toml
prover/: Cargo.toml  add_sub_lui_auipc_mop_unrolled_proof.json  bigint_delegation_generated.rs  blake2s_delegation_circuit_layout.json  blake2s_delegator_proof  blake_delegation_generated.rs  delegation_proof  full_machine_layout.json  inits_and_teardowns_unrolled_proof.json  jump_branch_slt_unrolled_proof.json  k_delegation_proof  keccak_delegation_circuit_layout.json  keccak_delegation_generated.rs  keccak_delegator_proof  minimal_machine_with_delegation_generated.rs  mul_div_unsigned_unrolled_proof.json  reduced_machine_preprocessed_generated.rs  shift_binop_csrrw_unrolled_proof.json  subword_only_load_store_unrolled_proof.json  word_only_load_store_unrolled_proof.json
reduced_keccak/: Cargo.toml
risc_v_simulator/: Cargo.toml
riscv_common/: Cargo.toml  README.md
riscv_transpiler/: Cargo.toml
riscv_transpiler/src/: lib.rs
riscv_transpiler/src/ir/: decode.rs  encoding_types.rs  instr_stream.rs  instructions.rs  mod.rs
riscv_transpiler/src/replayer/: mod.rs
riscv_transpiler/src/replayer/delegations/: bigint.rs  blake2_round_function.rs  keccak_special5.rs  mod.rs
riscv_transpiler/src/replayer/instructions/: mod.rs
riscv_transpiler/src/replayer/instructions/add_sub/: mod.rs
riscv_transpiler/src/replayer/instructions/binary/: mod.rs
riscv_transpiler/src/replayer/instructions/branch/: mod.rs
riscv_transpiler/src/replayer/instructions/jal_jalr/: mod.rs
riscv_transpiler/src/replayer/instructions/lui_auipc/: mod.rs
riscv_transpiler/src/replayer/instructions/memory/: mod.rs
riscv_transpiler/src/replayer/instructions/mop/: mod.rs
riscv_transpiler/src/replayer/instructions/mul_div/: mod.rs
riscv_transpiler/src/replayer/instructions/shifts/: mod.rs
riscv_transpiler/src/replayer/instructions/slt/: mod.rs
riscv_transpiler/src/replayer/instructions/zicsr/: mod.rs
riscv_transpiler/src/vm/: mod.rs  ram_with_rom_region.rs  replay_snapshotter.rs
riscv_transpiler/src/vm/delegations/: bigint.rs  blake2_round_function.rs  keccak_special5.rs  mod.rs
riscv_transpiler/src/vm/instructions/: mod.rs
riscv_transpiler/src/vm/instructions/add_sub/: mod.rs
riscv_transpiler/src/vm/instructions/binary/: mod.rs
riscv_transpiler/src/vm/instructions/branch/: mod.rs
riscv_transpiler/src/vm/instructions/jal_jalr/: mod.rs
riscv_transpiler/src/vm/instructions/lui_auipc/: mod.rs
riscv_transpiler/src/vm/instructions/memory/: mod.rs
riscv_transpiler/src/vm/instructions/mop/: mod.rs
riscv_transpiler/src/vm/instructions/mul_div/: mod.rs
riscv_transpiler/src/vm/instructions/shifts/: mod.rs
riscv_transpiler/src/vm/instructions/slt/: mod.rs
riscv_transpiler/src/vm/instructions/zicsr/: mod.rs
riscv_transpiler/src/witness/: mod.rs
riscv_transpiler/src/witness/delegation/: bigint.rs  blake2_round_function.rs  keccak_special5.rs  mod.rs
trace_holder/: Cargo.toml
transcript/: Cargo.toml
verifier/: Cargo.toml
verifier_common/: Cargo.toml
verifier_generator/: Cargo.toml  README.md  dump.sh
witness_eval_generator/: Cargo.toml
worker/: Cargo.toml
(+346 files in other folders)
