[package]
name = "airbender_execution_utils"
description = "ZKsync Airbender execution utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
verifier_common = { workspace = true, features = ["proof_utils", "replace_csr"] }
risc_v_simulator = { workspace = true, features = ["delegation"] }
trace_and_split = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = "*"

[dev-dependencies]
prover_examples = { workspace = true }
bincode = { version = "1.3" }
# full_statement_verifier = { workspace = true }
# full_statement_verifier = { path = "../full_statement_verifier" }

[features]
extended_tests = []
# debug = ["prover_examples/precheck_satisfied", "prover_examples/debug_satisfiable"]
default = []
# default = ["extended_tests"]
