[package]
name = "airbender_non_determinism_source"
description = "ZKsync Airbender source of non-determinism"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
