[package]
name = "airbender_reduced_keccak"
description = "ZKsync Airbender reduced keccak"

version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
