[package]
name = "airbender_circuit_common"
description = "ZKsync Airbender circuit common"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
field = { workspace = true }
fft = { workspace = true }
worker = { workspace = true }
